--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="mark_not_complete_note">Đánh dấu là chưa hoàn thành</string>
     <string name="sort_by_title">Sắp xếp theo tiêu đề</string>
     <string name="sort_by_date_time">Sắp xếp theo thời hạn</string>
+    <string name="close">close</string>
+    <string name="normal">Bình thường</string>
+    <string name="prioritized">Ưu tiên</string>
+    <string name="super_prioritized">Siêu cấp ưu tiên</string>
+    <string name="emergency">Khẩn cấp</string>
+    <string name="choose_option">Tùy chọn</string>
 </resources>
